adjustments for myself

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -12,7 +12,8 @@
     </div>
     <!-- SVG separator -->
     <div class="separator separator-bottom separator-skew">
-      <svg x="0" y="0" viewBox="0 0 2560 100" preserveAspectRatio="none" version="1.1" xmlns="http://www.w3.org/2000/svg">
+      <svg x="0" y="0" viewBox="0 0 2560 100" preserveAspectRatio="none" version="1.1"
+        xmlns="http://www.w3.org/2000/svg">
         <polygon class="fill-white" points="2560 0 2560 100 0 100"></polygon>
       </svg>
     </div>
@@ -25,7 +26,7 @@
             <div class="col-lg-3 order-lg-2">
               <div class="card-profile-image">
                 <a href="javascript:void(0)">
-                  <img src="./assets/img/theme/team-4-800x800.jpg" class="rounded-circle">
+                  <img src="https://i.imgur.com/Gqx7Fq6.jpg" class="rounded-circle">
                 </a>
               </div>
             </div>
@@ -39,32 +40,35 @@
               <div class="card-profile-stats d-flex justify-content-center">
                 <div>
                   <span class="heading">22</span>
-                  <span class="description">Friends</span>
+                  <span class="description">Talks</span>
                 </div>
                 <div>
-                  <span class="heading">10</span>
-                  <span class="description">Photos</span>
+                  <span class="heading">2</span>
+                  <span class="description">Startups</span>
                 </div>
                 <div>
-                  <span class="heading">89</span>
-                  <span class="description">Comments</span>
+                  <span class="heading">3</span>
+                  <span class="description">Communities</span>
                 </div>
               </div>
             </div>
           </div>
           <div class="text-center mt-5">
-            <h3>Jessica Jones
-              <span class="font-weight-light">, 27</span>
+            <h3>Mashhood Rastgar<span class="font-weight-light">, MARs</span>
             </h3>
-            <div class="h6 font-weight-300"><i class="ni location_pin mr-2"></i>Bucharest, Romania</div>
-            <div class="h6 mt-4"><i class="ni business_briefcase-24 mr-2"></i>Solution Manager - Creative Tim Officer</div>
-            <div><i class="ni education_hat mr-2"></i>University of Computer Science</div>
+            <div class="h6 font-weight-300"><i class="ni location_pin mr-2"></i>Karachi, Pakistan</div>
+            <div class="h6 mt-4"><i class="ni business_briefcase-24 mr-2"></i>CTO Sastaticket.pk
+            </div>
+            <div><i class="ni education_hat mr-2"></i>University College London</div>
           </div>
           <div class="mt-5 py-5 border-top text-center">
             <div class="row justify-content-center">
               <div class="col-lg-9">
-                <p>An artist of considerable range, Ryan — the name taken by Melbourne-raised, Brooklyn-based Nick Murphy — writes, performs and records all of his own music, giving it a warm, intimate feel with a solid groove structure. An artist of considerable range.</p>
-                <a href="javascript:void(0)">Show more</a>
+                <p>Mashhood leads the engineering team at Sastaticket.pk. He enjoys building awesome products and
+                  working with open source
+                  technologies. He is also an active developer community member, is currently serving as a Google
+                  Developer Expert. He is
+                  often seen speaking at conferences and mentoring different startups.</p>
               </div>
             </div>
           </div>
