--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,5 +1,7 @@
-<footer class="footer" [ngClass]="{'has-cards': getPath()!=='/user-profile' && getPath()!=='/register' && getPath()!=='/login'}">
-  <div class="container container-lg" *ngIf="getPath()!=='/user-profile' && getPath()!=='/register' && getPath()!=='/login'">
+<footer class="footer"
+  [ngClass]="{'has-cards': getPath()!=='/user-profile' && getPath()!=='/register' && getPath()!=='/login'}">
+  <!-- <div class="container container-lg"
+    *ngIf="getPath()!=='/user-profile' && getPath()!=='/register' && getPath()!=='/login'">
     <div class="row">
       <div class="col-md-6 mb-5 mb-md-0">
         <div class="card card-lift--hover shadow border-0">
@@ -16,24 +18,29 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   <div class="container">
-    <div class="row row-grid align-items-center" [ngClass]="{'my-md': getPath()!=='/user-profile' && getPath()!=='/register' && getPath()!=='/login', 'mb-5':getPath()==='/user-profile' || getPath()==='/register' || getPath()==='/login'}">
+    <div class="row row-grid align-items-center"
+      [ngClass]="{'my-md': getPath()!=='/user-profile' && getPath()!=='/register' && getPath()!=='/login', 'mb-5':getPath()==='/user-profile' || getPath()==='/register' || getPath()==='/login'}">
       <div class="col-lg-6">
-        <h3 class="text-primary font-weight-light mb-2">Thank you for supporting us!</h3>
+        <!-- <h3 class="text-primary font-weight-light mb-2">Thank you for supporting us!</h3> -->
         <h4 class="mb-0 font-weight-light">Let's get in touch on any of these platforms.</h4>
       </div>
       <div class="col-lg-6 text-lg-center btn-wrapper">
-        <a target="_blank" href="https://twitter.com/creativetim" class="btn btn-neutral btn-icon-only btn-twitter btn-round btn-lg" ngbTooltip="Follow us">
+        <a target="_blank" href="https://twitter.com/mashhoodr"
+          class="btn btn-neutral btn-icon-only btn-twitter btn-round btn-lg" ngbTooltip="Follow us">
           <i class="fa fa-twitter"></i>
         </a>
-        <a target="_blank" href="https://www.facebook.com/creativetim" class="btn btn-neutral btn-icon-only btn-facebook btn-round btn-lg" ngbTooltip="Like us">
+        <a target="_blank" href="https://www.facebook.com/mashhoodr"
+          class="btn btn-neutral btn-icon-only btn-facebook btn-round btn-lg" ngbTooltip="Like us">
           <i class="fa fa-facebook-square"></i>
         </a>
-        <a target="_blank" href="https://dribbble.com/creativetim" class="btn btn-neutral btn-icon-only btn-dribbble btn-lg btn-round" ngbTooltip="Follow us">
+        <a target="_blank" href="https://dribbble.com/mashhoodr"
+          class="btn btn-neutral btn-icon-only btn-dribbble btn-lg btn-round" ngbTooltip="Follow us">
           <i class="fa fa-dribbble"></i>
         </a>
-        <a target="_blank" href="https://github.com/creativetimofficial" class="btn btn-neutral btn-icon-only btn-github btn-round btn-lg" ngbTooltip="Star on Github">
+        <a target="_blank" href="https://github.com/mashhoodr"
+          class="btn btn-neutral btn-icon-only btn-github btn-round btn-lg" ngbTooltip="Star on Github">
           <i class="fa fa-github"></i>
         </a>
       </div>
@@ -42,11 +49,11 @@
     <div class="row align-items-center justify-content-md-between">
       <div class="col-md-6">
         <div class="copyright">
-          &copy; {{test | date: 'yyyy'}}
+          Thanks to
           <a href="https://www.creative-tim.com?ref=adsa-footer" target="_blank">Creative Tim</a>.
         </div>
       </div>
-      <div class="col-md-6">
+      <!-- <div class="col-md-6">
         <ul class="nav nav-footer justify-content-end">
           <li class="nav-item">
             <a href="https://www.creative-tim.com?ref=adsa-footer" class="nav-link" target="_blank">Creative Tim</a>
@@ -61,7 +68,7 @@
             <a href="https://github.com/creativetimofficial/argon-design-system-angular/blob/master/LICENSE.md" class="nav-link" target="_blank">MIT License</a>
           </li>
         </ul>
-      </div>
+      </div> -->
     </div>
   </div>
 </footer>
