additional adjustments for content / styling

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,7 +1,7 @@
 <main class="profile-page">
   <section class="section-profile-cover section-shaped my-0">
     <!-- Circles background -->
-    <div class="shape shape-style-1 shape-primary alpha-4">
+    <div class="shape shape-style-1 shape-dark alpha-4">
       <span></span>
       <span></span>
       <span></span>
@@ -32,8 +32,9 @@
             </div>
             <div class="col-lg-4 order-lg-3 text-lg-right align-self-lg-center">
               <div class="card-profile-actions py-4 mt-lg-0">
-                <a href="javascript:void(0)" class="btn btn-sm btn-info mr-4">Connect</a>
-                <a href="javascript:void(0)" class="btn btn-sm btn-default float-right">Message</a>
+                <a href="http://imars.info/wp-content/uploads/2019/07/mashhood-rastgar-resume.pdf"
+                  class="btn btn-sm btn-info mr-4">Resume</a>
+                <a href="mailto:mashhoodr@gmail.com" class="btn btn-sm btn-default float-right">Message</a>
               </div>
             </div>
             <div class="col-lg-4 order-lg-1">
@@ -43,19 +44,18 @@
                   <span class="description">Talks</span>
                 </div>
                 <div>
-                  <span class="heading">2</span>
-                  <span class="description">Startups</span>
+                  <span class="heading">10</span>
+                  <span class="description">Articles</span>
                 </div>
                 <div>
-                  <span class="heading">3</span>
-                  <span class="description">Communities</span>
+                  <span class="heading">8</span>
+                  <span class="description">Videos</span>
                 </div>
               </div>
             </div>
           </div>
           <div class="text-center mt-5">
-            <h3>Mashhood Rastgar<span class="font-weight-light">, MARs</span>
-            </h3>
+            <h3>Mashhood Rastgar</h3>
             <div class="h6 font-weight-300"><i class="ni location_pin mr-2"></i>Karachi, Pakistan</div>
             <div class="h6 mt-4"><i class="ni business_briefcase-24 mr-2"></i>CTO Sastaticket.pk
             </div>
