--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,9 +1,9 @@
 <nav id="navbar-main"
   class="navbar navbar-main navbar-expand-lg navbar-transparent navbar-light headroom headroom--top headroom--pinned">
   <div class="container">
-    <a class="navbar-brand mr-lg-5" [routerLink]="['/profile']">
-      <!-- <img src="./assets/img/brand/argon-white.png"> -->
-    </a>
+    <!-- <a class="navbar-brand mr-lg-5" [routerLink]="['/profile']">
+      <img src="./assets/img/brand/argon-white.png">
+    </a> -->
     <button class="navbar-toggler" type="button" (click)="isCollapsed = !isCollapsed"
       [attr.aria-expanded]="!isCollapsed" aria-controls="navbar_global">
       <span class="navbar-toggler-icon"></span>
@@ -26,6 +26,21 @@
         </div>
       </div>
       <ul class="navbar-nav navbar-nav-hover align-items-lg-center">
+        <li class="nav-item d-none d-lg-block ml-lg-4">
+          <a href="#" target="_blank" class="btn btn-neutral">
+            <span class="nav-link-inner--text">Blog</span>
+          </a>
+        </li>
+        <li class="nav-item d-none d-lg-block ml-lg-4">
+          <a href="#" target="_blank" class="btn btn-neutral">
+            <span class="nav-link-inner--text">Speaking / Training</span>
+          </a>
+        </li>
+        <li class="nav-item d-none d-lg-block ml-lg-4">
+          <a href="#" target="_blank" class="btn btn-neutral">
+            <span class="nav-link-inner--text">Videos</span>
+          </a>
+        </li>
         <!-- <li class="nav-item dropdown">
           <a class="nav-link no-caret" data-toggle="dropdown" role="button">
             <i class="ni ni-ui-04 d-lg-none"></i>
@@ -78,52 +93,42 @@
       </ul>
       <ul class="navbar-nav align-items-lg-center ml-lg-auto">
         <li class="nav-item">
-          <a class="nav-link nav-link-icon" href="https://www.facebook.com/creativetim" target="_blank"
+          <a class="nav-link nav-link-icon" href="https://www.facebook.com/mashhoodr" target="_blank"
             data-toggle="tooltip" title="Like us on Facebook">
             <i class="fa fa-facebook-square"></i>
             <span class="nav-link-inner--text d-lg-none">Facebook</span>
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link nav-link-icon" href="https://www.instagram.com/creativetimofficial" target="_blank"
+          <a class="nav-link nav-link-icon" href="https://www.instagram.com/mashhoodr" target="_blank"
             data-toggle="tooltip" title="Follow us on Instagram">
             <i class="fa fa-instagram"></i>
             <span class="nav-link-inner--text d-lg-none">Instagram</span>
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link nav-link-icon" href="https://twitter.com/creativetim" target="_blank" data-toggle="tooltip"
+          <a class="nav-link nav-link-icon" href="https://twitter.com/mashhoodr" target="_blank" data-toggle="tooltip"
             title="Follow us on Twitter">
             <i class="fa fa-twitter-square"></i>
             <span class="nav-link-inner--text d-lg-none">Twitter</span>
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link nav-link-icon"
-            href="https://github.com/creativetimofficial/argon-design-system-angular?ref=adsa-navbar" target="_blank"
-            data-toggle="tooltip" title="Star us on Github">
+          <a class="nav-link nav-link-icon" href="https://github.com/mashhoodr" target="_blank" data-toggle="tooltip"
+            title="Star us on Github">
             <i class="fa fa-github"></i>
             <span class="nav-link-inner--text d-lg-none">Github</span>
           </a>
         </li>
-        <li class="nav-item d-none d-lg-block ml-lg-4">
-          <a href="https://www.creative-tim.com/product/argon-design-system-angular?ref=adsa-navbar" target="_blank"
+        <!-- <li class="nav-item d-none d-lg-block ml-lg-4">
+          <a href="http://imars.info/wp-content/uploads/2019/07/mashhood-rastgar-resume.pdf" target="_blank"
             class="btn btn-neutral btn-icon">
             <span class="btn-inner--icon">
               <i class="fa fa-user-circle mr-2"></i>
             </span>
             <span class="nav-link-inner--text">Resume</span>
           </a>
-        </li>
-        <li class="nav-item d-none d-lg-block ml-lg-4">
-          <a href="https://www.creative-tim.com/product/argon-design-system-angular?ref=adsa-navbar" target="_blank"
-            class="btn btn-neutral">
-            <!-- <span class="btn-inner--icon">
-              <i class="fa fa-user-circle mr-2"></i>
-            </span> -->
-            <span class="nav-link-inner--text">Blog</span>
-          </a>
-        </li>
+        </li> -->
       </ul>
     </div>
   </div>
