chore: added video and talk pages

--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -27,20 +27,21 @@
       </div>
       <ul class="navbar-nav navbar-nav-hover align-items-lg-center">
         <li class="nav-item d-none d-lg-block ml-lg-4">
-          <a href="#" target="_blank" class="btn btn-neutral">
+          <a href="#/blog" class="btn btn-neutral">
             <span class="nav-link-inner--text">Blog</span>
           </a>
         </li>
         <li class="nav-item d-none d-lg-block ml-lg-4">
-          <a href="#" target="_blank" class="btn btn-neutral">
+          <a href="#/talk" class="btn btn-neutral">
             <span class="nav-link-inner--text">Speaking / Training</span>
           </a>
         </li>
-        <li class="nav-item d-none d-lg-block ml-lg-4">
-          <a href="#" target="_blank" class="btn btn-neutral">
+        <!-- <li class="nav-item d-none d-lg-block ml-lg-4">
+          <a href="#/video" class="btn btn-neutral">
             <span class="nav-link-inner--text">Videos</span>
           </a>
-        </li>
+        </li> -->
+
         <!-- <li class="nav-item dropdown">
           <a class="nav-link no-caret" data-toggle="dropdown" role="button">
             <i class="ni ni-ui-04 d-lg-none"></i>
