--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -38,17 +38,17 @@
               </div>
             </div>
             <div class="col-lg-4 order-lg-1">
-              <div class="card-profile-stats d-flex justify-content-center">
+              <div class="card-profile-stats d-flex justify-content-center" *ngIf="data$ | async as data">
                 <div>
-                  <span class="heading">22</span>
+                  <span class="heading">{{ data.talks && data.talks.length || 0 }}</span>
                   <span class="description">Talks</span>
                 </div>
                 <div>
-                  <span class="heading">10</span>
+                  <span class="heading">{{ data.posts && data.posts.length || 0 }}</span>
                   <span class="description">Articles</span>
                 </div>
                 <div>
-                  <span class="heading">8</span>
+                  <span class="heading">{{ data.videos && data.videos.length || 0 }}</span>
                   <span class="description">Videos</span>
                 </div>
               </div>
