--- a/src/app/talk/talk.component.html
+++ b/src/app/talk/talk.component.html
@@ -62,7 +62,8 @@
                       class="badge badge-pill badge-primary">{{tag}}</span>
                   </div>
                   <a *ngIf="talk.acf.slides_url" [href]="talk.acf.slides_url" class="btn btn-primary mt-4">Slides</a>
-                  <a *ngIf="talk.acf.youtube_url" [href]="talk.acf.youtube_url" class="btn btn-secondary mt-4">Video</a>
+                  <a *ngIf="talk.acf.youtube_link" [href]="talk.acf.youtube_link"
+                    class="btn btn-secondary mt-4">Video</a>
                 </div>
               </div>
             </div>
