--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -25,14 +25,14 @@
         <div class="px-4">
           <h1 *ngIf="i == 0" style="position: absolute;top:-300px;font-size: 600%;opacity: 0.2;">Blog</h1>
           <div class="mt-5">
-            <h3>{{ post.title.rendered }}</h3>
+            <h3>{{ post.title }}</h3>
             <div class="h6 font-weight-300">
-              by Mashhood Rastgar | {{ post.date }}
+              by {{ post.author.name }} | {{ post.date }}
             </div>
           </div>
           <div class="mt-5 py-5 border-top ">
             <div class="row justify-content-center">
-              <div class="col-lg-12" [innerHTML]="post.content.rendered"></div>
+              <div class="col-lg-12" [innerHTML]="post.content"></div>
             </div>
           </div>
         </div>
